# promptscribe

./: .gitignore  README.md  RELEASE_NOTES.md  config.yaml  for  pyproject.toml  requirements.txt  setup.py
promptscribe/: __init__.py  __main__.py  analyzer.py  cli.py  config.py  constants.py  db.py  gui.py  logger.py  parser.py  preprocess.py  recorder.py  scraper.py  session.py  stats.py  utils.py  viewer.py
promptscribe.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
